--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,7 +129,7 @@
                 <TextView
                     android:id="@+id/txtDontHaveAnAccount"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="63dp"
                     android:layout_marginBottom="32dp"
                     android:text="Don't Have an Account? Signup"
                     android:textAlignment="center"
