--- a/app/src/main/res/layout/layout_item_user.xml
+++ b/app/src/main/res/layout/layout_item_user.xml
@@ -239,6 +239,7 @@
 
         </LinearLayout>
         <ImageView
+            android:id="@+id/imgSetting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="110dp"
@@ -246,6 +247,7 @@
             android:src="@drawable/ic_setting"
             android:tint="@color/gray"/>
         <ImageView
+            android:id="@+id/imgDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="110dp"
